--- a/src/pages/UsersPage/users.module.scss
+++ b/src/pages/UsersPage/users.module.scss
@@ -20,6 +20,23 @@
     }
   }
   
+  .Badges {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    padding: 10px;
+  }
+
+  .BadgeImage {
+    transition: transform ease-in-out 0.25s;
+
+    &:hover {
+      transform: scale(1.85);
+    }
+  }
   .UserImage {
     height: 250px;
     object-fit: cover;
